--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 reqwest = { version = "0.12.20", features = ["json"] }
 tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
-universal-config = { version = "0.5.0", default-features = false, features = ["toml"] }
+universal-config = { version = "0.5.1", default-features = false, features = ["toml", "save"] }
 mpd-utils = "0.2.1"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
