--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ assets = [
 ]
 
 [dependencies]
-discord-presence = { version = "1.6.0", features = ["activity_type"] }
+discord-presence = { version = "2.1.0" }
 mpd_client = "1.4.1"
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
